--- a/frontend/productos.html
+++ b/frontend/productos.html
@@ -36,35 +36,13 @@
                     <label for="stock">Stock:</label>
                     <input type="number" id="stock" required>
                 </div>
-                <div class="form-actions">
-                    <button type="submit">Guardar</button>
-                    <button type="button" id="cancel-btn" style="display:none">Cancelar</button>
+                <div class="form-group">
+                    <label for="category">Categoría:</label>
+                    <select id="category">
+                        <option value="coffee">Café</option>
+                        <option value="espresso">Espresso</option>
+                        <option value="blend">Mezcla</option>
+                        <option value="specialty">Especialidad</option>
+                    </select>
                 </div>
-            </form>
-        </section>
-
-        <section class="products-section">
-            <h2>Lista de Productos</h2>
-            <div class="products-container">
-                <table id="products-table">
-                    <thead>
-                        <tr>
-                            <th>Nombre</th>
-                            <th>Descripción</th>
-                            <th>Precio</th>
-                            <th>Stock</th>
-                            <th>Acciones</th>
-                        </tr>
-                    </thead>
-                    <tbody id="products-list">
-                        <!-- Los productos se cargarán aquí -->
-                    </tbody>
-                </table>
-            </div>
-        </section>
-    </main>
-
-    <script src="js/products.js"></script>
-    <script src="js/app.js"></script>
-</body>
-</html>
+                <div class="form-group
